--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -46,9 +46,11 @@
                         </div>
                     </div>
 
-                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display">Nuova
+                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display"
+                        data-t="set_password_page_title">Nuova
                         Password</h1>
-                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold">
+                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold"
+                        data-t="login_subtitle">
                         Protocollo Titanium</p>
 
                     <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
@@ -128,9 +130,10 @@
                     <!-- Footer Link -->
                     <div class="mt-8 text-center border-t border-white/5 pt-6">
                         <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
-                            Problemi con il ripristino?
+                            <span data-t="problems_reset_text">Problemi con il ripristino?</span>
                             <a href="reset_password.html"
-                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold">Reinvia
+                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold"
+                                data-t="resend_link_text">Reinvia
                                 email con link</a>
                         </p>
                     </div>
