--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -46,13 +46,15 @@
                         </div>
                     </div>
 
-                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display">Recupero
+                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display"
+                        data-t="reset_page_title">Recupero
                     </h1>
-                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold">
+                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold"
+                        data-t="login_subtitle">
                         Protocollo Titanium</p>
 
                     <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
-                    <p data-ui="hint" class="mb-10 text-center">
+                    <p data-ui="hint" class="mb-10 text-center" data-t="reset_hint">
                         Inserisci l'indirizzo email associato al tuo account. Ti invieremo un collegamento sicuro per
                         impostare una nuova chiave d'accesso.
                     </p>
@@ -61,17 +63,20 @@
                         <!-- Email Input -->
                         <div class="space-y-2">
                             <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Indirizzo
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
+                                data-t="email_address_label">Indirizzo
                                 Email</label>
                             <input id="email" type="email" placeholder="nome@esempio.com" required
-                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
+                                data-t="email_placeholder">
                         </div>
 
                         <!-- Action Button -->
                         <button type="submit"
                             class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
                             <div class="relative z-10 flex items-center justify-center gap-2">
-                                <span class="tracking-widest uppercase text-xs">Invia email istruzioni</span>
+                                <span class="tracking-widest uppercase text-xs" data-t="send_instructions_btn">Invia
+                                    email istruzioni</span>
                                 <span class="material-symbols-outlined text-sm">send</span>
                             </div>
                         </button>
@@ -80,9 +85,10 @@
                     <!-- Footer Link -->
                     <div class="mt-8 text-center border-t border-white/5 pt-6">
                         <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
-                            Hai ricordato la password?
+                            <span data-t="remembered_password_text">Hai ricordato la password?</span>
                             <a href="index.html"
-                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold">Torna
+                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold"
+                                data-t="back_to_login_link">Torna
                                 all'accesso</a>
                         </p>
                     </div>
