--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -51,26 +51,32 @@
                         </div>
                     </div>
 
-                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display">Registrati
+                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display"
+                        data-t="register_page_title">Registrati
                     </h1>
-                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold">
+                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold"
+                        data-t="login_subtitle">
                         Protocollo Titanium</p>
 
                     <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
                     <div class="mb-8 p-4 bg-white/5 rounded-2xl border border-white/5 no-select">
                         <div class="flex items-center gap-2 mb-2">
                             <span class="material-symbols-outlined text-blue-400 text-sm">info</span>
-                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Requisiti Password
+                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest"
+                                data-t="password_req_title">Requisiti Password
                             </h4>
                         </div>
                         <ul class="text-[11px] text-white/40 space-y-1 list-none italic leading-relaxed">
                             <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Minimo 12 caratteri totali</li>
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_min_chars">Minimo
+                                    12 caratteri totali</span></li>
                             <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Almeno 3 Lettere Maiuscole</li>
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_upper">Almeno 3
+                                    Lettere Maiuscole</span></li>
                             <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Almeno 3 Simboli Speciali (!, @, #,
-                                ...)</li>
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_symbols">Almeno 3
+                                    Simboli Speciali (!, @, #,
+                                    ...)</span></li>
                         </ul>
                     </div>
 
@@ -79,30 +85,36 @@
                         <!-- Username -->
                         <div class="space-y-2">
                             <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Nome
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
+                                data-t="username_label">Nome
                                 Utente</label>
                             <input id="nome" type="text" placeholder="Scegli un username" required
-                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
+                                data-t="username_placeholder_reg">
                             <input id="cognome" type="hidden" value="">
                         </div>
 
                         <!-- Email -->
                         <div class="space-y-2">
                             <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Email
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
+                                data-t="email_label">Email
                                 per iscrizione</label>
                             <input id="email" type="email" placeholder="nome@esempio.com" required
-                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
+                                data-t="email_placeholder">
                         </div>
 
                         <!-- Password -->
                         <div class="space-y-2">
                             <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Chiave
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
+                                data-t="password_label_reg">Chiave
                                 d'Accesso</label>
                             <div class="relative group/input">
                                 <input id="password" type="password" placeholder="Min. 8 caratteri" required
-                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
+                                    data-t="password_placeholder_reg">
                                 <button type="button"
                                     class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
                                     <span
@@ -124,7 +136,8 @@
                                     class="h-full flex-1 rounded-full bg-white/10 transition-all duration-500"></div>
                             </div>
                             <p id="strength-text"
-                                class="text-[9px] font-bold text-white/30 uppercase tracking-widest text-right select-none italic">
+                                class="text-[9px] font-bold text-white/30 uppercase tracking-widest text-right select-none italic"
+                                data-t="security_level_zero">
                                 Protezione Livello Zero</p>
                         </div>
 
@@ -132,7 +145,8 @@
                         <button type="submit"
                             class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
                             <div class="relative z-10 flex items-center justify-center gap-2">
-                                <span class="tracking-widest uppercase text-xs">Crea Account</span>
+                                <span class="tracking-widest uppercase text-xs" data-t="create_account_btn">Crea
+                                    Account</span>
                                 <span class="material-symbols-outlined text-sm">arrow_forward</span>
                             </div>
                         </button>
@@ -141,9 +155,10 @@
                     <!-- Footer Links -->
                     <div class="mt-8 text-center border-t border-white/5 pt-6">
                         <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
-                            Hai già un'utenza?
+                            <span data-t="have_account_text">Hai già un'utenza?</span>
                             <a href="index.html"
-                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold">Accedi
+                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold"
+                                data-t="login_now_link">Accedi
                                 ora</a>
                         </p>
                     </div>
@@ -165,18 +180,20 @@
                 class="w-16 h-16 bg-blue-500/20 rounded-2xl flex items-center justify-center mx-auto mb-6 text-blue-400 border border-blue-500/30">
                 <span class="material-symbols-outlined text-[32px]">forward_to_inbox</span>
             </div>
-            <h2 class="text-2xl font-black text-white mb-2 font-display">Verifica Email</h2>
-            <p class="text-xs text-white/50 leading-relaxed mb-8 px-2 select-none">
+            <h2 class="text-2xl font-black text-white mb-2 font-display" data-t="verify_email_title">Verifica Email</h2>
+            <p class="text-xs text-white/50 leading-relaxed mb-8 px-2 select-none" data-t="verify_email_text">
                 Abbiamo inviato un collegamento di sicurezza alla tua casella postale. Conferma l'identità per
                 procedere.
             </p>
             <div class="space-y-3">
                 <button id="resend-btn"
-                    class="w-full h-12 bg-white/5 hover:bg-white/10 text-white text-xs font-bold rounded-xl border border-white/10 transition-all uppercase tracking-widest">
+                    class="w-full h-12 bg-white/5 hover:bg-white/10 text-white text-xs font-bold rounded-xl border border-white/10 transition-all uppercase tracking-widest"
+                    data-t="resend_email_btn">
                     Reinvia Email
                 </button>
                 <button id="close-modal"
-                    class="w-full h-12 text-white/30 hover:text-white text-xs font-bold transition-colors uppercase tracking-widest">
+                    class="w-full h-12 text-white/30 hover:text-white text-xs font-bold transition-colors uppercase tracking-widest"
+                    data-t="back_to_login_btn">
                     Torna al Login
                 </button>
             </div>
