--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title data-t="home_page_title">Home Page</title>
 
     <!-- Titanium Engine Stack -->
     <script src="assets/js/titanium-config.js"></script>
@@ -39,11 +39,11 @@
                         <div class="glass-shine"></div>
                         <div class="bg-icon-container">
                             <span class="material-symbols-outlined titanium-icon-lg" role="img"
-                                aria-label="Icona Cassaforte Personale">lock</span>
+                                aria-label="Icona Cassaforte Personale" data-t-aria="aria_private">lock</span>
                         </div>
                         <div class="card-text-block">
-                            <h3>Privato</h3>
-                            <p data-ui="hint">Cassaforte Personale</p>
+                            <h3 data-t="section_private_title">Privato</h3>
+                            <p data-ui="hint" data-t="section_private_desc">Cassaforte Personale</p>
                         </div>
                     </a>
 
@@ -51,11 +51,11 @@
                         <div class="glass-shine"></div>
                         <div class="bg-icon-container">
                             <span class="material-symbols-outlined titanium-icon-lg" role="img"
-                                aria-label="Icona Gestione Aziendale">apartment</span>
+                                aria-label="Icona Gestione Aziendale" data-t-aria="aria_company">apartment</span>
                         </div>
                         <div class="card-text-block">
-                            <h3>Azienda</h3>
-                            <p data-ui="hint">Gestione Risorse</p>
+                            <h3 data-t="section_company_title">Azienda</h3>
+                            <p data-ui="hint" data-t="section_company_desc">Gestione Risorse</p>
                         </div>
                     </a>
                 </div>
@@ -65,17 +65,17 @@
                     class="matrix-orange border-glow scadenze-box no-lift">
                     <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
                         <span class="material-symbols-outlined titanium-icon-xl" role="img"
-                            aria-label="Calendario Scadenze">calendar_month</span>
+                            aria-label="Calendario Scadenze" data-t-aria="aria_deadlines">calendar_month</span>
                     </div>
                     <div class="box-content-main">
                         <div class="box-header-flex">
                             <div class="title-group">
-                                <h3>Scadenze</h3>
+                                <h3 data-t="section_deadlines_title">Scadenze</h3>
                                 <span id="urgent-count-badge" class="urgent-badge" style="opacity: 0;">
                                     <span id="urgent-count">0</span>
                                 </span>
                             </div>
-                            <p data-ui="hint">Controlla i prossimi impegni</p>
+                            <p data-ui="hint" data-t="section_deadlines_desc">Controlla i prossimi impegni</p>
                         </div>
                         <div id="deadline-list-container" class="dashboard-dynamic-list"></div>
                     </div>
@@ -85,18 +85,18 @@
                 <div id="urgenze-card" data-href="urgenze.html" data-ui-section="urgenze" role="button" tabindex="0"
                     class="matrix-red border-glow urgenze-box no-lift">
                     <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
-                        <span class="material-symbols-outlined titanium-icon-xxl" role="img"
-                            aria-label="Avviso Urgenze">warning</span>
+                        <span class="material-symbols-outlined titanium-icon-xxl" role="img" aria-label="Avviso Urgenze"
+                            data-t-aria="aria_urgencies">warning</span>
                     </div>
                     <div class="box-content-main">
                         <div class="box-header-flex">
                             <div class="title-group">
-                                <h3>Urgenze</h3>
+                                <h3 data-t="section_urgencies_title">Urgenze</h3>
                                 <span id="expired-count-badge" class="urgent-badge" style="opacity: 0;">
                                     <span id="expired-count">0</span>
                                 </span>
                             </div>
-                            <p data-ui="hint">Pratiche scadute</p>
+                            <p data-ui="hint" data-t="section_urgencies_desc">Pratiche scadute</p>
                         </div>
                         <div id="urgenze-list" class="dashboard-dynamic-list no-scrollbar"></div>
                     </div>
